# we_api

./: .gitignore  README.md  pyproject.toml
django_ninja/: main.py
